--- a/scss/partials/layout/_footer.scss
+++ b/scss/partials/layout/_footer.scss
@@ -1,135 +1,135 @@
 .footer {
-    height: 55vh;
-    @include flexbox;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    background-color: $color-white;
+  height: 55vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  background-color: $color-white;
+  font-size: $font-size-xs;
+  color: #000;
+  font-weight: $bold;
+
+  @include screen(mobile) {
+    @include orientation(landscape) {
+      height: 80vh;
+      font-size: $font-size-xs;
+    }
+  }
+
+  @include screen(tablet) {
+    font-size: $font-size-s;
+
+    @include orientation(landscape) {
+      font-size: $font-size-xs;
+    }
+  }
+
+  @include screen(desktop) {
+    height: 15vh;
+    flex-direction: row-reverse;
+    font-size: $font-size-m;
+
+    @include orientation(landscape) {
+      font-size: $font-size-s;
+    }
+  }
+
+  @include rwd(1365) {
+    @include orientation(landscape) {
+      font-size: $font-size-m;
+    }
+  }
+
+  @include screen(big-desktop) {
     font-size: $font-size-xs;
-    color: #000;
-    font-weight: $bold;
+  }
 
-    @include screen(mobile) {
-        @include orientation(landscape) {
-            height: 80vh;
-            font-size: $font-size-xs;
-        }
-    }
+  @include screen(large) {
+    font-size: $font-size-s;
+  }
 
-    @include screen(tablet) {
-        font-size: $font-size-s;
+  &__link-mobile {
+    display: flex;
+    align-items: center;
+  }
 
-        @include orientation(landscape) {
-            font-size: $font-size-xs;
-        }
-    }
+  &__icon {
+    margin-right: 7px;
+    font-size: $font-size-xs;
 
     @include screen(desktop) {
-        height: 15vh;
-        flex-direction: row-reverse;
-        font-size: $font-size-m;
-
-        @include orientation(landscape) {
-            font-size: $font-size-s;
-        }
-    }
-
-    @include rwd(1365) {
-        @include orientation(landscape) {
-            font-size: $font-size-m;
-        }
+      font-size: $font-size-m;
     }
 
     @include screen(big-desktop) {
-        font-size: $font-size-xs;
+      font-size: $font-size-s;
     }
 
     @include screen(large) {
-        font-size: $font-size-s;
+      font-size: $font-size-m;
+    }
+  }
+
+  &__logo {
+    height: 150px;
+    width: 140px;
+    background-image: url(../img/logo.png);
+    background-size: cover;
+    background-position: center;
+
+    @include screen(tablet) {
+      height: 190px;
+      width: 180px;
+
+      @include orientation(landscape) {
+        height: 130px;
+        width: 120px;
+      }
     }
 
-    &__link-mobile {
-        @include flexbox;
-        align-items: center;
+    @include screen(desktop) {
+      display: none;
+    }
+  }
+
+  &__signature {
+    text-transform: uppercase;
+    font-weight: $normal;
+
+    @include screen(mobile) {
+      @include orientation(landscape) {
+        font-size: $font-size-xxs;
+      }
     }
 
-    &__icon {
-        margin-right: 7px;
+    @include screen(tablet) {
+      font-size: $font-size-xs;
+
+      @include orientation(landscape) {
+        font-size: $font-size-xxs;
+      }
+    }
+
+    @include screen(desktop) {
+      font-size: $font-size-s;
+
+      @include orientation(landscape) {
         font-size: $font-size-xs;
-
-        @include screen(desktop) {
-            font-size: $font-size-m;
-        }
-
-        @include screen(big-desktop) {
-            font-size: $font-size-s;
-        }
-
-        @include screen(large) {
-            font-size: $font-size-m;
-        }
+      }
     }
 
-    &__logo {
-        height: 150px;
-        width: 140px;
-        background-image: url(../img/logo.png);
-        background-size: cover;
-        background-position: center;
-
-        @include screen(tablet) {
-            height: 190px;
-            width: 180px;
-
-            @include orientation(landscape) {
-                height: 130px;
-                width: 120px;
-            }
-        }
-
-        @include screen(desktop) {
-            display: none;
-        }
+    @include rwd(1365) {
+      @include orientation(landscape) {
+        font-size: $font-size-s;
+      }
     }
 
-    &__signature {
-        text-transform: uppercase;
-        font-weight: $normal;
-
-        @include screen(mobile) {
-            @include orientation(landscape) {
-                font-size: $font-size-xxs;
-            }
-        }
-
-        @include screen(tablet) {
-            font-size: $font-size-xs;
-
-            @include orientation(landscape) {
-                font-size: $font-size-xxs;
-            }
-        }
-
-        @include screen(desktop) {
-            font-size: $font-size-s;
-
-            @include orientation(landscape) {
-                font-size: $font-size-xs;
-            }
-        }
-
-        @include rwd(1365) {
-            @include orientation(landscape) {
-                font-size: $font-size-s;
-            }
-        }
-
-        @include screen(big-desktop) {
-            font-size: $font-size-xxs;
-        }
-
-        @include screen(large) {
-            font-size: $font-size-xs;
-        }
+    @include screen(big-desktop) {
+      font-size: $font-size-xxs;
     }
+
+    @include screen(large) {
+      font-size: $font-size-xs;
+    }
+  }
 }
