--- a/scss/partials/layout/_preloader.scss
+++ b/scss/partials/layout/_preloader.scss
@@ -1,39 +1,39 @@
 .preloader {
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    @include flexbox;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #1d2630;
+  z-index: 1000;
+
+  &__container {
+    width: 120px;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-around;
-    background-color: #1d2630;
-    z-index: 1000;
+  }
 
-    &__container {
-        width: 120px;
-        @include flexbox;
-        justify-content: space-between;
-        align-items: center;
+  &__dot {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: $color-primary;
+
+    &:nth-child(1) {
+      animation: pulse 0.4s ease 0s infinite alternate;
+      -webkit-animation: pulse 0.4s ease 0s infinite alternate;
     }
 
-    &__dot {
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        background-color: $color-primary;
-
-        &:nth-child(1) {
-            animation: pulse .4s ease 0s infinite alternate;
-            -webkit-animation: pulse .4s ease 0s infinite alternate;
-        }
-
-        &:nth-child(2) {
-            animation: pulse .4s ease .2s infinite alternate;
-            -webkit-animation: pulse .4s ease .2s infinite alternate;
-        }
-
-        &:nth-child(3) {
-            animation: pulse .4s ease .4s infinite alternate;
-            -webkit-animation: pulse .4s ease .4s infinite alternate;
-        }
+    &:nth-child(2) {
+      animation: pulse 0.4s ease 0.2s infinite alternate;
+      -webkit-animation: pulse 0.4s ease 0.2s infinite alternate;
     }
+
+    &:nth-child(3) {
+      animation: pulse 0.4s ease 0.4s infinite alternate;
+      -webkit-animation: pulse 0.4s ease 0.4s infinite alternate;
+    }
+  }
 }
